<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"        >

        <TextView
            android:id="@+id/tvConnectionsTitle"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:textAlignment="center"
            android:text="@string/cfTitle"
            android:textSize="10pt"
            android:layout_marginBottom="3pt"
            android:layout_width="0dp" />

    </LinearLayout>


    <EditText
        android:id="@+id/tAdress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/chat_hint"
        android:inputType="text" />


    <EditText
        android:id="@+id/tMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:hint="@string/message_hint"
        android:imeOptions="actionSend"/>

    <Button
        android:id="@+id/bSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_gravity="center"
        android:padding="30dp"
        android:text="@string/send"
        android:textSize="20sp" />

    <ListView
        android:id="@+id/lvChat"
        android:transcriptMode="alwaysScroll"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_above="@+id/bSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>
